Ajustes para la llamada del primer componente.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <nb-layout>
-  <nb-layout-header></nb-layout-header>
+  <nb-layout-header>
+    <nb-actions>
+      <nb-action icon="plus-square-outline"></nb-action>
+    </nb-actions>
+  </nb-layout-header>
   <nb-layout-column>
     <router-outlet></router-outlet>
   </nb-layout-column>
