--- a/src/app/card-test-config/card-test-config.component.html
+++ b/src/app/card-test-config/card-test-config.component.html
@@ -2,9 +2,20 @@
   <div class="row">
     <div class="col-md-4">
       <nb-card status="success">
-        <nb-card-header> Buenas </nb-card-header>
-        <nb-card-body> </nb-card-body>
+        <nb-card-header>
+
+        </nb-card-header>
+        <nb-card-body class="row">
+          <div class="col-md-6">
+
+          </div>
+          <div class="col-md-6">
+
+          </div>
+        </nb-card-body>
       </nb-card>
+      
     </div>
+    <!-- Ejemplo de cards -->
   </div>
 </div>
