Ajustes en las opciones del select.

--- a/src/app/card-design/card-design.component.html
+++ b/src/app/card-design/card-design.component.html
@@ -28,19 +28,19 @@
       <div class="col-md-2"></div>
         <div class="col-md-4">
           <nb-select size="tiny" placeholder="Type:">
-            <nb-option value="1">status</nb-option>
-            <nb-option value="2">accent</nb-option>
+            <nb-option value="status">status</nb-option>
+            <nb-option value="accent">accent</nb-option>
             <nb-option [value]="null">-none-</nb-option>
           </nb-select>
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-4">
           <nb-select size="tiny" placeholder="Color:">
-            <nb-option value="1">success</nb-option>
-            <nb-option value="2">primary</nb-option>
-            <nb-option value="3">info</nb-option>
-            <nb-option value="4">danger</nb-option>
-            <nb-option value="5">warning</nb-option>
+            <nb-option value="success">success</nb-option>
+            <nb-option value="primary">primary</nb-option>
+            <nb-option value="info">info</nb-option>
+            <nb-option value="danger">danger</nb-option>
+            <nb-option value="warning">warning</nb-option>
             <nb-option [value]="null">-none-</nb-option>
         </nb-select>
       </div>
